--- a/languages/th/music.yaml
+++ b/languages/th/music.yaml
@@ -21,7 +21,7 @@ forward_invalid: "โปรดใช้ตัวเลข\nการใช้ง
 ### Join command!
 join_loading: "กำลังโหลด โปรดรอสักครู่..."
 join_voice: "คุณต้องอยู่ในห้องเสียงเพื่อใช้คำสั่ง"
-join_msg: "`🔊` | *test msg:* `%{channel}`"
+join_msg: "`🔊` | *hahaha:* `%{channel}`"
 
 ### Leave command!
 leave_loading: "กำลังโหลด โปรดรอสักครู่..."
