Relic and Simulacra update

--- a/languages/en/game.yaml
+++ b/languages/en/game.yaml
@@ -10,11 +10,11 @@ attack_normal: "Attack - Normal"
 attack_hold: "Attack - Hold" 
 tips_tricks: "Tips & Tricks"
 1star: "Advancements\n\n1★"
-2star: "2★"
-3star: "3★"
-4star: "4★"
-5star: "5★"
-6star: "6★"
+2star: "2★★"
+3star: "3★★★"
+4star: "4★★★★"
+5star: "5★★★★★"
+6star: "6★★★★★★"
 1trait: "**Simulacrum Traits**:\n\n1200"
 2trait: "4000"
 
