--- a/languages/en/media.yaml
+++ b/languages/en/media.yaml
@@ -5,3 +5,9 @@ hug: "hugged"
 kiss: "gave kiss to"
 pat: "patted"
 slap: "slapped"
+bite: "has bitten"
+pout: "poutted at"
+laugh: "laughs at"
+lick: "licked"
+love: "loves"
+punch: "punched"
