--- a/languages/ru/media.yaml
+++ b/languages/ru/media.yaml
@@ -4,3 +4,10 @@ food: "покормил"
 hug: "обнял"
 kiss: "поцеловал"
 pat: "погладил"
+slap: "шлёпнул"
+bite: "укусил"
+pout: "дуется на"
+laugh: "смеется над"
+lick: "лизнул"
+love: "любит"
+punch: "ударил"
