--- a/languages/en/premium.yaml
+++ b/languages/en/premium.yaml
@@ -6,14 +6,14 @@ gen_desc: "• *Generated* [`+%{codes_length}`]\n```%{codes}```\n • *Plan*: `%
 gen_footer: "Type: %{prefix}redeem <code> to redeem!"
 
 ##### Profile command #####
-profile_author: "Premium Profile"
-profile_desc: "*User*: `%{user}`\n*Plan*: `%{plan}`\n*Expires at*: `%{expires}`"
+profile_author: "Premium profile"
+profile_desc: "Plan: **%{plan}**\nExpires at: **%{expires}**"
 
 ##### Redeem command #####
 redeem_arg: "Please specify the code you want to redeem!"
 redeem_already: "You are already a premium user"
 redeem_title: "Premium redeemed"
-redeem_desc: "**You have successfully redeemed premium!**\n\n*Expires at*: [`%{expires}`]"
+redeem_desc: "**You have successfully redeemed premium!**\n\nExpires at: **[%{expires}]**"
 redeem_invalid: "**The code is invalid. Please try again using valid one!**"
 
 ##### Remove command #####
