--- a/languages/en/utilities.yaml
+++ b/languages/en/utilities.yaml
@@ -1,16 +1,10 @@
 ##### Language command #####
-lang_perm: "You need the `MANAGE_GUILD` permission to use this command."
-lang_arg: "Please specify a language!"
+lang_perm: "Im sorry but u need `MANAGE_GUILD` permission to change Capys language"
+lang_arg: "Please select a valid language"
 provide_lang: "Please provide languages: `%{languages}`"
-lang_set: "`🔧` | *Language has been set to:* `%{language}`"
-lang_change: "`🔧` | *Language has been change to:* `%{language}`"
+lang_set: "Language was successfully set to: **%{language}**"
+lang_change: "Language was successfully changed to: **%{language}**"
 lang_error: "Something went wrong please try again later."
 
 ##### Restart command #####
 restart_msg: "`🤖` | *Client is:* `Shutting down`"
-
-##### Help command #####
-help_desc: "Please Select Category Menu!"
-help_category_desc: "Select the %{category} to see all commands."
-help_category: "%{category}"
-help_timeout: "```Help Menu timed out try using %{prefix}help again.```"
